Simplified, but possibly broken some things in the process.